Fixed some max width bugs with flex containers that have a child with the square component. Breaks the flex algo on older browsers.

--- a/src/assets/sass/app.scss
+++ b/src/assets/sass/app.scss
@@ -67,6 +67,7 @@ ul {
 
   .header-avatar {
     flex:0 0 125px;
+    max-width:125px;
   }
 
   .account-header {
