--- a/src/assets/sass/partials/_content-table.scss
+++ b/src/assets/sass/partials/_content-table.scss
@@ -160,6 +160,7 @@
 
 .avatar-col {
   flex:0 0 60px;
+  max-width:60px;
 }
 
 .basic-col {
