--- a/src/assets/sass/partials/_forum.scss
+++ b/src/assets/sass/partials/_forum.scss
@@ -4,6 +4,7 @@
 
   .avatar-column {
     flex: 0 0 50px;
+    max-width:50px;
   }
 
   .post-body {
